-Alterado template de login e colocado o link para os alunos poderem se cadastrar

--- a/aplicacao/contest/src/main/resources/templates/login.html
+++ b/aplicacao/contest/src/main/resources/templates/login.html
@@ -25,10 +25,13 @@
         <h1 class="center header">Controle de Eventos de Submissão</h1>
         <div class="col s12 m6">
           <p>
-            Mussum Ipsum, cacilds vidis litro abertis. Quem num gosti di mum que vai caçá sua turmis! Mé faiz elementum girarzis, nisi eros vermeio. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi. Quem num gosta di mé, boa gente num é.
+            
+			Seja bem vindo ao Sistema de Controle de Eventos de Submissão, acesse o sistema com seu usuário e 
+			senha previamente cadastrado, caso não possua o cadastro, <a href="http://cadastroaluno.intranet/">clique aqui</a> 
+			e logo em seguida entre com os dados no formulário ao lado. (OBS: O link so pode ser acessado de dentro da rede do campus) 
           </p>
           <p>
-            Mussum Ipsum, cacilds vidis litro abertis. Quem num gosti di mum que vai caçá sua turmis! Mé faiz elementum girarzis, nisi eros vermeio. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi. Quem num gosta di mé, boa gente num é.
+            Tenha um bom evento! Para acessar o sistema de cadastro, você deve está na rede da UFC Campus Quixadá!
           </p>
         </div>
         <div class="col s12 m6" >
