-Mapeando logo para a "/"

--- a/aplicacao/contest/src/main/resources/templates/fragments/header.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/header.html
@@ -10,7 +10,7 @@
 	<div th:fragment="header">
 		<nav role="navigation" class="purple darken-4" >
 			<div class="nav-wrapper container">
-				<a href="#"><img th:src="@{/img/logotipo_white.png}"
+				<a th:href="@{/}"><img th:src="@{/img/logotipo_white.png}"
 					alt="Contest" width="200px" /></a>
 				<ul class="white-text right hide-on-med-and-down">
 					<li><a href="#" th:text="${pessoa.nome}"></a></li>			        
