-Correção no diagrama de classe -Correção nas mensagens de erro nas páginas de erros

--- a/aplicacao/contest/src/main/resources/templates/error/500.html
+++ b/aplicacao/contest/src/main/resources/templates/error/500.html
@@ -15,8 +15,8 @@
 <body>
   <div th:include="fragments/headerError :: header"></div>
   <div class="container page">
-    <h1 class="center">Deixe de ser gaiato</h1>
-    <h5 class="center">Vá procurar uma lavagem de roupa :p</h5>
+    <h1 class="center">Erro inesperado no sistema</h1>
+    <h5 class="center">Tente novamente mais tarde</h5>
     <div class="row ">
       <center>
     	<a th:href="@{/}" class="waves-effect waves-light btn white-text ">Voltar</a>
