--- a/aplicacao/contest/src/main/resources/templates/error/erro.html
+++ b/aplicacao/contest/src/main/resources/templates/error/erro.html
@@ -15,7 +15,7 @@
 <body>
   <div th:include="fragments/headerError :: header"></div>
   <div class="container page">
-    <h1 class="center">Deu erro no paraiso :(</h1>
+    <h1 class="center">Deu erro no paraíso :(</h1>
     <div class="row ">
       <center>
     	<a th:href="@{/}" class="waves-effect waves-light btn white-text ">Voltar</a>
