--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_trilha.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_trilha.html
@@ -18,36 +18,42 @@
       <div class="row">
         <h2 th:text="'Detalhes da Trilha :' + ${trilha.nome}"></h2>
       </div>
-      <div id="error_area" class="row chip red white-text">"Mensagem de Erro"<i class="material-icons">close</i></div>
+      <div th:if="${#lists.isEmpty(trabalhos)}">
+        <div class="row">
+          <h4> Não há Trabalhos nessa trilha</h4>
+        </div>
+      </div>
       <div class="row">
         <div class="input-field col m4 s5">  <a href="#modalTrilha" class="waves-effect waves-light btn white-text modal-trigger">Alterar nome da Trilha<i aria-hidden="true" class="fa fa-pencil left"></i></a></div>
         <div class="input-field col m5 s5"> <a href="#modalExcluir" class="waves-effect waves-light btn white-text modal-trigger">Excluir Trilha<i aria-hidden="true" class="fa fa-trash left">        </i></a></div>
       </div>
-      <h4>Trabalhos inscritos nessa Trilha (3)</h4>
-      <div class="row">
-        <div class="input-field col m12 s6">
-          <table class="striped centered">
-            <thead>
-              <tr> 
-                <th>Trilha</th>
-                <th>Aluno</th>
-                <th>Revisado</th>
-                <th>Revisor</th>
-                <th>Detalhes</th>
-              </tr>
-            </thead>
-            <tbody>             
-              <tr th:each="trabalho : ${trabalho}">
-                <td><p th:text="${trabalho.nome}"></p></td>
-                <td>Dilma Roussef</td>
-                <td>Não</td>
-                <td> <a href="#modalRevisor" class="modal-trigger">Atribuir Revisor</a></td>
-                <td> <a href="org_trabalho_detalhes.html">Ver detalhes    </a></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+      <div th:if="${not #lists.isEmpty(trabalhos)}">
+        <h4 th:text="|Trabalhos inscritos nessa Trilha (${#arrays.length(trabalhos)})|"></h4>
+        <div class="row">
+          <div class="input-field col m12 s6">
+            <table class="striped centered">
+              <thead>
+                <tr> 
+                  <th>Trilha</th>
+                  <th>Aluno</th>
+                  <th>Revisado</th>
+                  <th>Revisor</th>
+                </tr>
+              </thead>
+              <tbody>             
+                <tr th:each="trabalho : ${trabalhos}">
+                  <td th:text="${trabalho.titulo}"></td>
+                  <td th:text="${trabalho.participacoes[0].pessoa.nome}"></td>
+                  <td th:if="${#lists.isEmpty(trabalho.revisoes)}">Não</td>
+                  <td th:if="${not #lists.isEmpty(trabalho.revisoes)}">Sim</td>
+                  <td> <a href="#modalRevisor" class="modal-trigger">Atribuir Revisor</a></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>   
       </div>
+
       <div id="paginacao">         
                 <div class="row col s12 center">
                   <ul class="pagination">
@@ -87,104 +93,18 @@
 	           	<input type="hidden" th:value="${trilha.evento.id}" name = "eventoId"/>
               <label for="nome_do_revisor">Nome da Trilha</label>
             </div>
-          	 <div class="modal-footer">
-	        <button type="submit" value="Confirmar" class="modal-action modal-close waves-effect btn-flat">Alterar</button> 
-	        <a href="#" class="modal-action modal-close waves-effect btn-flat">Fechar</a>
-	    </div>
+          	<div class="modal-footer">
+	          <button type="submit" value="Confirmar" class="modal-action modal-close waves-effect btn-flat">Alterar</button> 
+	          <a href="#" class="modal-action modal-close waves-effect btn-flat">Fechar</a>
+	        </div>
 	    </form>
         </div>
-        <div class="modal-footer"><a href="#" class="modal-action modal-close waves-effect btn-flat">Alterar</a><a href="#" class="modal-action modal-close waves-effect btn-flat">Fechar</a></div>
       </div>
     </div>
     <div th:include="fragments/footer :: footer"></div>
     <script type="text/javascript">
       $(document).ready(function(){
-        //Inicialização dos elementos no JS
-        //Parallax BG
-        $('.parallax').parallax();
-        
-        //sideNav
-        $(".button-collapse").sideNav();
-        
-        //Tooltips
-        $('.tooltipped').tooltip({delay: 50});
-        
-        //select_initializer
-        $('select').material_select();
-        
-        //datepicker
-        $('.datepicker').pickadate({
-          selectMonths: true, // Creates a dropdown to control month
-          selectYears: 15, // Creates a dropdown of 15 years to control year
-          //Persnonalizando nomes dos meses do ano
-          monthsFull: [ 'Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro' ],
-          //Persnonalizando nomes dos dias da semana
-          weekdaysFull: [ 'Domingo', 'Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado' ],
-          weekdaysShort: [ 'Dom', 'Seg', 'Ter', 'Qua', 'Qui', 'Sex', 'Sab' ],
-          weekdaysLetter: [ 'D', 'S', 'T', 'Q', 'Q', 'S', 'S' ],
-          today: 'Hoje',
-          clear: 'Limpar',
-          close: 'Fechar'
-        });
-        
-        //Trata as datas na tela org_editar_eventos 
-        var calendarioSubmissaoInicial = "#prazo_submissao_inicial";
-        var calendarioSubmissaoFinal = "#prazo_submissao_final";
-        var calendarioRevisaoInicial = "#prazo_revisao_inicial";
-        var calendarioRevisaoFinal = "#prazo_revisao_final";
-        
-        function habilitarCalendario(calendario){
-          $(calendario).removeAttr( "disabled" );
-        }
-        
-        function desabilitarCalendario(calendario){
-          $(calendario).attr( "disabled", true );
-          $(calendario).pickadate("clear");
-        }
-        
-        function definirDataMinimaCalendario(calendario, dataMin){
-          var picker = getPicker(calendario);
-          picker.set("min", dataMin);
-        }
-        
-        function getPicker(idCalendario){
-          var $input = $(idCalendario).pickadate();
-          var picker = $input.pickadate("picker");
-          return picker;
-        }
-        
-        function configurarCalendario(idCalendarioInicial, idCalendarioFinal){
-          var picker = getPicker(idCalendarioInicial);
-          var dataAtual = picker.get();
-          var umDia = 1;
-          
-          var dataMinima = new Date(dataAtual);
-          dataMinima.setDate(dataMinima.getDate()+umDia);
-                
-          if (dataAtual.length == 0) {
-            desabilitarCalendario(idCalendarioFinal);
-          } else {
-            habilitarCalendario(idCalendarioFinal);       
-            
-            definirDataMinimaCalendario(idCalendarioFinal, dataMinima);
-          }
-        }
-        
-        $(calendarioSubmissaoInicial).on("change",function(){
-          configurarCalendario(calendarioSubmissaoInicial, calendarioSubmissaoFinal);
-        });
-        
-        $(calendarioSubmissaoFinal).on("change",function(){
-          configurarCalendario(calendarioSubmissaoFinal, calendarioRevisaoInicial);
-        });
-        
-        $(calendarioRevisaoInicial).on("change",function(){
-          configurarCalendario(calendarioRevisaoInicial, calendarioRevisaoFinal);
-        });
-        
-        //Inicialização do Modal excluir Evento
         $('.modal-trigger').leanModal();
-        
       });
     </script>
   </body>
