1#	Alteração do controlador autor para enviarTrabalhoForm. 2#	Adição de nova coluna no banco de dados.

--- a/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
@@ -31,7 +31,7 @@
         </div>
       </div>
       
-      
+      <!-- Falta terminar a integração com a interface da submissao final -->
       <div class="col s12">
         
         <div th:if="${not #lists.isEmpty(listaTrabalhos)}" class="col s4">
