--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
@@ -63,9 +63,11 @@
             <div class="card horizontal small">
               <div class="card-stacked">
                 <div class="card-content"><span class="card-title">Revisores do Evento</span>
-                  <p>Número de trilhas:</p>
+                  <p>Número de Revisores:</p>
                 </div>
-                <div class="card-action"><a href="#" class="btn white-text waves-effect waves-light blue-grey">Gerenciar Revisores</a></div>
+                <div class="card-action">
+                	<a th:href="@{'/eventoOrganizador/evento/' + ${evento.id}} +'/revisores'" class="btn white-text waves-effect waves-light blue-grey">Gerenciar Revisores</a>
+                </div>
               </div>
             </div>
           </div>
@@ -73,9 +75,9 @@
             <div class="card horizontal small">
               <div class="card-stacked">
                 <div class="card-content"><span class="card-title">Trabalhos do Evento</span>
-                  <p>Número de trilhas: 0</p>
-                  <p>Número de trilhas: 0</p>
-                  <p>Número de trilhas: 0</p>
+                  <p th:text="'Submetidos: ' + ${qtdTrabalhos}"></p>
+                  <p>Revisados: 0</p>
+                  <p>Não Revisados: 0</p>
                 </div>
                 <div class="card-action"><a href="#" class="btn white-text waves-effect waves-light blue-grey">Gerenciar Trabalhos</a></div>
               </div>
