-Correção nos testes de cadastrar -Adiciona mais de um organizador há um evento -Refatorado código de listar os eventos ativos e inativos do organizador e do admin

--- a/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
@@ -83,7 +83,9 @@
         	
           </div>
         </div>
-        
+        <div th:if="${#lists.isEmpty(listaTrabalhos)}" class="col s4">
+        	<p>Você não enviou trabalhos para esse evento</p>
+        </div>
       </div>
             <div class="row col s12 center">
               <ul class="pagination">
