--- a/aplicacao/contest/src/main/resources/templates/organizador/org_atribuir_revisores.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_atribuir_revisores.html
@@ -38,9 +38,148 @@
           </div>
           </div>
         </div>
+      	<form action="">
+	      	<div id="modalRevisor" class="modal">
+	      		<div class="modal-content">
+	      			<h4 class="block">Nome do Trabalho</h4>
+	      			<div class="row">
+	      				<div class="input-field col m6 s6">
+	      					<i class="material-icons large prefix">search</i>
+	      					<input id="nome_do_revisor" type="text" />
+	                		<label for="nome_do_revisor">Nome do Revisor</label>
+	                		<div id="listaRevisores" class="collection">
+	                			<a th:each="revisor : ${revisores}" th:id="${revisor.id}" onclick="add(this)" class="collection-item" th:text="${revisor.nome}"> 
+	                				<span data-position="bottom" data-delay="50" data-tooltip="Trabalhos Atribuidos a Esteve Revisor" class="title badge tooltipped">1</span>
+	                			</a>
+	                		</div>
+	      				</div>
+	      				<div class="col m6 s6">
+                			<h5 id="listaEscolhidosTitulo">Revisores Selecionados</h5>
+                			<div id="listaEscolhidos" class="collection"></div>
+                		</div>
+	      			</div>
+	      		</div>
+	      		<div class="modal-footer block">
+	            	<a href="#" class="modal-action modal-close waves-effect btn-flat">Fechar  </a>
+	            </div>
+	      	</div>
+      	</form>
       </div>
     </div>
 	<div th:include="fragments/footer :: footer"></div>
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript">
+    $(document).ready(function(){
+    	//Inicialização dos elementos no JS
+        //Parallax BG
+        $('.parallax').parallax();
+    	
+      //sideNav
+        $(".button-collapse").sideNav();
+        
+        //Tooltips
+        $('.tooltipped').tooltip({delay: 50});
+        
+        //select_initializer
+        $('select').material_select();
+        
+        //datepicker
+        $('.datepicker').pickadate({
+          selectMonths: true, // Creates a dropdown to control month
+          selectYears: 15, // Creates a dropdown of 15 years to control year
+          //Persnonalizando nomes dos meses do ano
+          monthsFull: [ 'Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro' ],
+          //Persnonalizando nomes dos dias da semana
+          weekdaysFull: [ 'Domingo', 'Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado' ],
+          weekdaysShort: [ 'Dom', 'Seg', 'Ter', 'Qua', 'Qui', 'Sex', 'Sab' ],
+          weekdaysLetter: [ 'D', 'S', 'T', 'Q', 'Q', 'S', 'S' ],
+          today: 'Hoje',
+          clear: 'Limpar',
+          close: 'Fechar'
+        });
+        
+      //Trata as datas na tela org_editar_eventos 
+        var calendarioSubmissaoInicial = "#prazo_submissao_inicial";
+        var calendarioSubmissaoFinal = "#prazo_submissao_final";
+        var calendarioRevisaoInicial = "#prazo_revisao_inicial";
+        var calendarioRevisaoFinal = "#prazo_revisao_final";
+        
+        function habilitarCalendario(calendario){
+          $(calendario).removeAttr( "disabled" );
+        }
+        
+        function desabilitarCalendario(calendario){
+          $(calendario).attr( "disabled", true );
+          $(calendario).pickadate("clear");
+        }
+        
+        function definirDataMinimaCalendario(calendario, dataMin){
+          var picker = getPicker(calendario);
+          picker.set("min", dataMin);
+        }
+        
+        function getPicker(idCalendario){
+          var $input = $(idCalendario).pickadate();
+          var picker = $input.pickadate("picker");
+          return picker;
+        }
+        
+        function configurarCalendario(idCalendarioInicial, idCalendarioFinal){
+          var picker = getPicker(idCalendarioInicial);
+          var dataAtual = picker.get();
+          var umDia = 1;
+          
+          var dataMinima = new Date(dataAtual);
+          dataMinima.setDate(dataMinima.getDate()+umDia);
+                
+          if (dataAtual.length == 0) {
+            desabilitarCalendario(idCalendarioFinal);
+          } else {
+            habilitarCalendario(idCalendarioFinal);       
+            
+            definirDataMinimaCalendario(idCalendarioFinal, dataMinima);
+          }
+        }
+        
+        $(calendarioSubmissaoInicial).on("change",function(){
+          configurarCalendario(calendarioSubmissaoInicial, calendarioSubmissaoFinal);
+        });
+        
+        $(calendarioSubmissaoFinal).on("change",function(){
+          configurarCalendario(calendarioSubmissaoFinal, calendarioRevisaoInicial);
+        });
+        
+        $(calendarioRevisaoInicial).on("change",function(){
+          configurarCalendario(calendarioRevisaoInicial, calendarioRevisaoFinal);
+        });
+        
+        //Inicialização do Modal excluir Evento
+        $('.modal-trigger').leanModal();
+        
+      //select_initializer
+        $('select').material_select();
+        
+        $( "#listaRevisores" ).scroll(function() {
+        });
+        
+        add = function(e) {//vai receber o Objeto vindo da linkRevisor
+            var elemento = document.getElementById(e.id);
+            var listaescolhidos = document.getElementById("listaEscolhidos");
+            var cont = 0;
+            
+            if ($('#listaEscolhidos').find('#'+e.id).length>0){
+                cont++;
+            }
+           
+            if(cont != 0){
+              Materialize.toast('O mesmo organizador não pode ser alocado mais de uma vez no mesmo evento', 4000)
+            }else{
+              var a = elemento.cloneNode(true);
+              a.setAttribute('onclick','$(this).remove();');
+              document.getElementById("listaEscolhidos").appendChild(a);
+            }
+          }
+        
+    });
+    </script>
   </body>
 </html>
