add butão na tela de mostrar eventos

--- a/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_inativos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_inativos.html
@@ -43,15 +43,15 @@
 
         <div th:case="${true}">
       
-        <div th:each="participacaoEventoInativos : ${eventosInativos}" class="col m6 s12">
+        <div th:each="evento : ${eventosInativos}" class="col m6 s12">
           <div class="card">
-            <div class="card-content"><span class="card-title" th:text="${participacaoEventoInativos.evento.nome}"></span>
-              <p th:text="|Organizador: ${participacaoEventoInativos.pessoa.nome}|"></p>
-              <p th:text="|Visibilidade: ${participacaoEventoInativos.evento.visibilidade.visibilidade}|"></p>
+            <div class="card-content"><span class="card-title" th:text="${evento.nome}"></span>
+              <p th:text="|Organizador: ${evento.participacoes[0].pessoa.nome}|"></p>
+              <p th:text="|Visibilidade: ${evento.visibilidade.visibilidade}|"></p>
             </div>
             <div class="card-action">
-              <a th:href="@{'/eventoOrganizador/ativar/' + ${participacaoEventoInativos.evento.id}}"  class="btn white-text waves-effect waves-light">Ativar</a>
-              <a th:href="@{'/eventoOrganizador/editar/' + ${participacaoEventoInativos.evento.id}}" class="btn white-text waves-effect waves-light orange">Editar</a>
+              <a th:href="@{'/eventoOrganizador/ativar/' + ${evento.id}}"  class="btn white-text waves-effect waves-light">Ativar</a>
+              <a th:href="@{'/eventoOrganizador/editar/' + ${evento.id}}" class="btn white-text waves-effect waves-light orange">Editar</a>
             </div>
           </div>
          </div>
