--- a/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
@@ -19,18 +19,40 @@
         <h2>Lista de Eventos Ativos</h2>
         
         <div> 
-          <div th:each="participacaoEventoAtivos : ${eventosAtivos}" class="col m6 s12">
+          <div th:each="evento : ${eventosAtivos}" class="col m6 s12">
             <div class="card">
               <div class="card-content">
-	              <span class="card-title" th:text="${participacaoEventoAtivos.evento.nome}" >Nome do Evento</span>
-	              <p th:text="|Organizador: ${participacaoEventoAtivos.pessoa.nome}|"></p>
-	              <p th:text="|Visibilidade: ${participacaoEventoAtivos.evento.visibilidade.visibilidade}|"></p>
+	              <span class="card-title" th:text="${evento.nome}" >Nome do Evento</span>
+	              <p th:text="|Organizador: ${evento.participacoes[0].pessoa.nome}|"></p>
+	              <p th:text="|Visibilidade: ${evento.visibilidade.visibilidade}|"></p>
               </div>
               <div class="card-action">
-              	<a href="#" class="btn white-text waves-effect waves-light blue-grey">Inativar</a>
-              	<a th:href="@{'/eventoOrganizador/evento/' + ${participacaoEventoAtivos.evento.id}}" class="btn white-text waves-effect waves-light blue-grey">Detalhes</a>
+              	  <a href="#" class="btn white-text waves-effect waves-light blue-grey">Inativar</a>
+              	  <a th:attr="href='#modal' + ${evento.id}" 
+              	  class="waves-effect waves-light btn white-text modal-trigger">Participar</a>
+                  <a th:href="@{'/eventoOrganizador/evento/' + ${evento.id}}" class="btn white-text waves-effect waves-light blue-grey">Detalhes</a>
+              	
               </div>
             </div>
+            
+            
+            <div th:attr="id='modal'+${evento.id}" class="modal">
+          		<div class="modal-content">
+	            	<h4>Participar do Evento</h4>
+	            	<h5 th:text="${evento.nome}"></h5>
+	            	<p>Tem certeza que quer participar desse evento?</p>	
+          		</div>
+          		<form th:action="@{/revisor/participarevento}" method="post">		
+					<div class="modal-footer">
+						<input type="hidden" name="idEvento" th:value="${evento.id}"/>
+						<button type="submit" class="modal-action modal-close waves-effect btn-flat">Confirmar</button><a
+						href="#" class="modal-action modal-close waves-effect btn-flat">Cancelar</a>
+					</div>
+				</form>	
+        	</div>
+            
+            
+            
           </div>
          </div>
         </div>
